HTML and CSS cleaning

--- a/templates/Base_files/Navbar.html
+++ b/templates/Base_files/Navbar.html
@@ -11,7 +11,7 @@
 
     <!-- navbar.html -->
     <header>
-        <h1>Biology & Genetics Hub</h1>
+        <h1>Learning Hub</h1>
         <nav>
             <ul class="nav-links">
                 <li><a href="/">Home</a></li>
@@ -28,7 +28,7 @@
                             <ul class="more-sub-menu sub-menu">
                                 <li><a href="/introduction genetics/classical genetics">Classical genetics</a></li>
                                 <li><a href="/work in progress">Lesson 2</a></li>
-                                <li><a href="/introduction genetics">More</a></li>
+                                <li><a href="/work in progress">More</a></li>
                             </ul>
                         </li>
                         <li class="more">
@@ -39,7 +39,7 @@
                             <ul class="more-sub-menu sub-menu">
                                 <li><a href="/machine learning/pattern mining">Lesson 1</a></li>
                                 <li><a href="/work in progress">Lesson 2</a></li>
-                                <li><a href="/introduction genetics">More</a></li>
+                                <li><a href="/work in progress">More</a></li>
                             </ul>
                         </li>
 
@@ -51,7 +51,7 @@
                             <ul class="more-sub-menu sub-menu">
                                 <li><a href="/statistics/linear regression">Linear regression</a></li>
                                 <li><a href="/work in progress">Lesson 2</a></li>
-                                <li><a href="/introduction genetics">More</a></li>
+                                <li><a href="/work in progress">More</a></li>
                             </ul>
                         </li>
 
