--- a/templates/Genetics/IG_Classical_genetics.html
+++ b/templates/Genetics/IG_Classical_genetics.html
@@ -14,7 +14,7 @@
 <div class="content-wrapper">
     <!-- Include Navbar -->
     <div id="navbar">
-    {% include 'Navbar.html' %}
+        {% include 'Base_files/Navbar.html' %}
     </div>
 
      <section class="hero">
@@ -95,28 +95,13 @@
         </p>
 
 
-    <h4>Chromosomes</h4>
-<p>
-    </p>
-
-    <p>
-    </p>
-
-
-
-
-
-
-
-
-
 
 
     </section>
 
 </div>
     <!-- Include Footer -->
-    {% include 'Footer.html' %}
+    {% include 'Base_files/Footer.html' %}
 
 
 </body>
