--- a/templates/All_articles.html
+++ b/templates/All_articles.html
@@ -24,6 +24,8 @@
         <!-- Article List Section -->
         <section class="white-box">
             <div class="yellow-box-container">
+
+
                 <!-- Article Group 1 -->
                 <div class="yellow-box-item visible">
                     <h3>Introduction to Genetics</h3>
@@ -33,6 +35,8 @@
                     <a href="/introduction genetics">Explore</a>
                 </div>
 
+
+                <!-- Article Group 2 -->
                 <div class="yellow-box-item visible">
                     <h3>Introduction to Bioinformatics</h3>
                     <img src="{% static 'images/Bioinfo.jpg' %}" class="img-rectangle" alt="Introduction to Bioinformatics">
@@ -40,6 +44,8 @@
                     <a href="/bioinformatics">Explore</a>
                 </div>
 
+
+                <!-- Article Group 3 -->
                 <div class="yellow-box-item visible">
                     <h3>Machine learning</h3>
                     <img src="{% static 'images/Bioinfo.jpg' %}" class="img-rectangle" alt="Introduction to Bioinformatics">
@@ -47,34 +53,15 @@
                     <a href="/machine learning">Explore</a>
                 </div>
 
-                <div class="yellow-box-item visible">
-                    <h3>Advanced Genetics</h3>
-                    <img src="{% static 'images/A.jpg' %}" class="img-rectangle" alt="Advanced Genetics">
-                    <p>Deep dive into advanced topics in genetics for experienced learners.</p>
-                    <a href="/article-3">Explore</a>
-                </div>
 
-                <!-- Article Group 2 -->
+                <!-- Article Group 4 -->
                 <div class="yellow-box-item">
-                    <h3>Introduction </h3>
+                    <h3>Introduction to statistics </h3>
                     <img src="{% static 'images/A.jpg' %}" class="img-rectangle" alt="Introduction to Genetics">
                     <p>An introduction to the fundamental concepts of genetics, perfect for beginners.</p>
-                    <a href="/article-1">Explore</a>
+                    <a href="/statistics">Explore</a>
                 </div>
 
-                <div class="yellow-box-item">
-                    <h3>Introduction to Bioinformatics</h3>
-                    <img src="{% static 'images/A.jpg' %}" class="img-rectangle" alt="Introduction to Bioinformatics">
-                    <p>Discover the latest advancements in bioinformatics and their applications.</p>
-                    <a href="/article-2">Explore</a>
-                </div>
-
-                <div class="yellow-box-item">
-                    <h3>Advanced Genetics</h3>
-                    <img src="{% static 'images/A.jpg' %}" class="img-rectangle" alt="Advanced Genetics">
-                    <p>Deep dive into advanced topics in genetics for experienced learners.</p>
-                    <a href="/article-3">Explore</a>
-                </div>
 
                 <!-- Carousel Navigation Buttons -->
                 <button class="prev" onclick="showPrev()">❮</button>
