--- a/templates/Base_files/Base_Article.html
+++ b/templates/Base_files/Base_Article.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{% block title %}Biology & Genetics Hub{% endblock %}</title>
+    <title>{% block title %}Learning Hub{% endblock %}</title>
     <link rel="stylesheet" href="{% static 'styles/Base_file.css' %}">
     <link rel="stylesheet" href="{% static 'styles/Image_style.css' %}">
     <link rel="stylesheet" href="{% static 'styles/Text.css' %}">
