--- a/static/styles/buttons.css
+++ b/static/styles/buttons.css
@@ -30,3 +30,40 @@
     background-color: #138CA2;
     transform: scale(1.1);
 }
+
+
+.custom-button {
+    background-color: #15688A;
+    color: #ffffff;
+    padding: 10px 15px;
+    border-radius: 50px;
+    font-size: 1.2rem;
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
+    transition: background-color 0.3s ease, transform 0.3s ease;
+    position: relative;
+    z-index: 1;
+    border: none;  /* Removes any default border */
+    cursor: pointer; /* Changes the cursor to a pointer on hover */
+}
+
+.custom-button:hover {
+    background-color: #138CA2; /* Adjusted color on hover */
+    transform: scale(1.1); /* Slight zoom effect on hover */
+}
+
+
+.custom-input {
+    background-color: #f0f4f8; /* Light background color */
+    color: #333; /* Text color */
+    padding: 12px 20px; /* Adds padding for comfort */
+    border: 2px solid #15688A; /* Matches button color for consistency */
+    border-radius: 30px; /* Rounds the input for a similar look to buttons */
+    font-size: 1rem; /* Slightly larger font for readability */
+    outline: none; /* Removes default focus outline */
+    transition: border-color 0.3s ease, box-shadow 0.3s ease;
+}
+
+.custom-input:focus {
+    border-color: #138CA2; /* Changes color on focus for interactivity */
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15); /* Adds a slight shadow on focus */
+}
