--- a/templates/Base_files/Base_Article.html
+++ b/templates/Base_files/Base_Article.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="{% static 'styles/Base_file.css' %}">
     <link rel="stylesheet" href="{% static 'styles/Image_style.css' %}">
     <link rel="stylesheet" href="{% static 'styles/Text.css' %}">
+    <link rel="stylesheet" href="{% static 'styles/buttons.css' %}">
 </head>
 <body>
 
